Current array initialization was replaced with Arrays.asList()